<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    </LinearLayout>
    <LinearLayout
            android:id="@+id/layMousqueton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField1"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulair_field1"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxMousqueton"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/layGants"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField2"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulaire_field2"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxGants"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField3"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulaire_field3"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxCeinture"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField4"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulaire_field4"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxDetecteur"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField5"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulaire_field5"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxBrassard"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField6"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulaire_field6"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxLampe"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" android:orientation="horizontal">
        <TextView
                android:text="@string/formuField7"
                android:layout_width="233dp"
                android:layout_height="wrap_content" android:id="@+id/formulaire_field7"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cbxGilet"/>
    </LinearLayout>
</LinearLayout>