<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:theme="@android:style/Theme.NoTitleBar" tools:background="@color/colorAccent">
    <TextView
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result_success_title"
            android:text="@string/result_success_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"/>
    <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result_success_content"
            android:text="@string/result_success_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"/>
    <Button
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:text="@string/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"/>
</LinearLayout>