<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0099cc"
             tools:context=".Home">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:keepScreenOn="true"
              android:gravity="center"
              android:text="@string/dummy_content" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    />
    <Button
            android:text="@string/button_home_gauche"
            android:layout_width="200dp"
            android:layout_height="200dp" android:id="@+id/button3"
            android:layout_alignParentBottom="true"/>
    <Button
            android:text="@string/button_home_droite"
            android:layout_width="200dp"
            android:layout_height="200dp" android:id="@+id/button4"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/button3"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>